--- a/src/index.pug
+++ b/src/index.pug
@@ -10,21 +10,14 @@ html#app(ng-app="vpdb", lang="en")
 		meta(name="description", content="{{ meta.description }}")
 		meta(name="keywords", content="{{ meta.keywords }}")
 		meta(name="thumbnail", content="{{ meta.thumbnail }}")
-		link(rel="apple-touch-icon", sizes="57x57", href="/apple-touch-icon-57x57.png")
-		link(rel="apple-touch-icon", sizes="114x114", href="/apple-touch-icon-114x114.png")
-		link(rel="apple-touch-icon", sizes="72x72", href="/apple-touch-icon-72x72.png")
-		link(rel="apple-touch-icon", sizes="144x144", href="/apple-touch-icon-144x144.png")
-		link(rel="apple-touch-icon", sizes="60x60", href="/apple-touch-icon-60x60.png")
-		link(rel="apple-touch-icon", sizes="120x120", href="/apple-touch-icon-120x120.png")
-		link(rel="apple-touch-icon", sizes="76x76", href="/apple-touch-icon-76x76.png")
-		link(rel="apple-touch-icon", sizes="152x152", href="/apple-touch-icon-152x152.png")
-		//link(rel="icon", type="image/png", href="/favicon-196x196.png", sizes="196x196")
-		//link(rel="icon", type="image/png", href="/favicon-160x160.png", sizes="160x160")
-		//link(rel="icon", type="image/png", href="/favicon-96x96.png", sizes="96x96")
-		//link(rel="icon", type="image/png", href="/favicon-16x16.png", sizes="16x16")
-		//link(rel="icon", type="image/png", href="/favicon-32x32.png", sizes="32x32")
+		link(rel="apple-touch-icon", sizes="180x180", href="/favicon/apple-touch-icon.png")
+		link(rel="icon", type="image/png", sizes="32x32", href="/favicon/favicon-32x32.png")
+		link(rel="icon", type="image/png", sizes="16x16", href="/favicon/favicon-16x16.png")
+		link(rel="manifest", href="/favicon/site.webmanifest")
+		link(rel="mask-icon", href="/favicon/safari-pinned-tab.svg", color="#5bbad5")
+		link(rel="shortcut icon", href="/favicon/favicon.ico")
 		meta(name="msapplication-TileColor", content="#ec843d")
-		meta(name="msapplication-TileImage", content="/mstile-144x144.png")
+		meta(name="msapplication-config", content="/favicon/browserconfig.xml")
 		meta(http-equiv="X-UA-Compatible", content="IE=Edge")
 		script(type="text/javascript", src="//use.typekit.net/xhi7wnv.js")
 		script(type="text/javascript") try { Typekit.load(); } catch (e) { }
