fix(styles): Don't initially set theme to dark to avoid CSS issues.

--- a/src/index.pug
+++ b/src/index.pug
@@ -24,7 +24,7 @@ html#app(ng-app="vpdb", lang="en")
 
 		base(href="/")
 
-	body.theme-dark#top(ng-class="themeName")
+	body#top(ng-class="themeName")
 
 		vpdb
 
