fix: Same-line comments actually render in Pug, duh.

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,6 +1,7 @@
 doctype html
 block root
-html#app(ng-app="vpdb", lang="en") //- to debug injections, add ng-strict-di to <html> element and run in dev mode!
+//- to debug injections, add ng-strict-di to <html> element and run in dev mode!
+html#app(ng-app="vpdb", lang="en")
 	head
 		title(ng-bind="pageTitle")
 		meta(charset='utf8')
