--- a/src/styles/colors/alerts.styl
+++ b/src/styles/colors/alerts.styl
@@ -52,6 +52,11 @@
 		.svg-icon
 			fill $color-lightest
 		background-color $color-danger
+	.alert-warning
+		color $color-lightest
+		.svg-icon
+			fill $color-lightest
+		background-color $color-primary-dark
 	.alert-success
 		color $color-lightest
 		.svg-icon
