--- a/src/app/games/game.select.modal.pug
+++ b/src/app/games/game.select.modal.pug
@@ -20,6 +20,10 @@ include ../template/_mixins
 				typeahead-wait-ms="250",
 				focus-on
 			)
+		div.alert.alert-warning(ng-show="vm.status.offline")
+			+icon('warning').space-right.shift-up
+			| You seem to be offline. Try again by typing.
+
 		h3.h--no-margin Game not found?
 		p We might haven't added the game you're looking for yet. Tell us about it and we'll do so as soon as possible!
 		button.btn.btn-hollow.pull-right(ng-click="vm.requestGame()") Request Game
@@ -32,7 +36,7 @@ include ../template/_mixins
 
 		div.media.media--game-item
 			.media-left
-				.img.img--ar-bg(img-bg="vm.App.img(match.model.backglass, 'small')")
+				.img.img--ar-bg(img-bg="$parent.$parent.$parent.$parent.vm.App.img(match.model.backglass, 'small')")
 			.media-body
 				h3.h--no-margin.h--lighter {{ match.model.title }}
 
