feat(connectivity): Add offline icon.

--- a/src/app/games/game.list.pug
+++ b/src/app/games/game.list.pug
@@ -19,7 +19,7 @@ include ../template/paginator
 
 		//- offline
 		.pull-left(ng-show="vm.status.offline")
-			+icon('times').small.space-right
+			+icon('offline').small.space-right
 			| You seem to be offline.
 			a.space-left(ng-click="vm.refresh()") Retry
 
