fix(home): Fix close button of info panel.

--- a/src/app/home/home.pug
+++ b/src/app/home/home.pug
@@ -45,7 +45,7 @@ include ../template/paginator
 		.panel(uib-collapse="!whatsThis")
 
 			.clear
-				+icon('offline')(ng-click="whatsThis = false").a
+				+icon('times')(ng-click="whatsThis = false").a
 
 			h3.h--large.h--primary What's this?
 			p.center-block
