--- a/src/app/profile/profile.settings.pug
+++ b/src/app/profile/profile.settings.pug
@@ -241,3 +241,12 @@ table.table.table-striped(ng-if="vm.providers.length")
 
 p(ng-if="!vm.providers.length")
 	i No linked accounts. Linked accounts appear when you choose to login with one of the supported third party providers. In order to link a third party account to this account, simply login using a third party account where you registered with the same email address.
+
+//- link to new account
+div(ng-if="vm.AuthService.getProviders(vm.AuthService.user, true).length > 0")
+	p Link account to:
+	span(ng-repeat="provider in vm.AuthService.getProviders(vm.AuthService.user, true)")
+		button.btn.btn-hollow.space-right(ng-click="vm.linkAccount(provider)")
+			+icon('{{ provider.icon }}').space-right
+			| {{ provider.name }}
+
