feat(profile): Add user merge dialog.

--- a/src/styles/colors/type.styl
+++ b/src/styles/colors/type.styl
@@ -68,6 +68,10 @@
 	h5
 		color $color-lightish-inv
 
+	.flavor-item.active
+		h1, h2, h3, h4, h5, h6, .pre-h4
+			color $color-lightest
+
 	.h--primary
 		color $color-primary-black
 		> .svg-icon
