feat(lazyload): Add POC.

--- a/src/app/games/admin/edit/game.edit.admin.pug
+++ b/src/app/games/admin/edit/game.edit.admin.pug
@@ -1,6 +1,6 @@
-include ../template/_mixins
+include ../../../template/_mixins
 
-.row.row--fullheight(ng-controller="GameEditAdminCtrl as vm")
+.row.row--fullheight
 	.col-sm-9.col--main
 		h1.h--primary Edit Game
 		hr
