--- a/src/app/games/details/game.details-02-release.pug
+++ b/src/app/games/details/game.details-02-release.pug
@@ -1,4 +1,4 @@
-include ../template/_mixins
+include ../../template/_mixins
 
 h1 Releases
 label(ng-hide="vm.hasReleases || vm.game.restrictions.release.mpu") No releases for this game available.
