--- a/src/app/games/details/game.details-05-media.pug
+++ b/src/app/games/details/game.details-05-media.pug
@@ -1,4 +1,4 @@
-include ../template/_mixins
+include ../../template/_mixins
 
 h1.padder-top-2x Media
 label(ng-hide="vm.game.media.length > 0") No media available.
