--- a/src/app/games/details/game.details.pug
+++ b/src/app/games/details/game.details.pug
@@ -1,6 +1,6 @@
-include ../template/_mixins
+include ../../template/_mixins
 
-.row.ng-cloak.row--fullheight.fade-animation(ng-controller="GameDetailsCtrl as vm", ng-show="!vm.pageLoading")
+.row.ng-cloak.row--fullheight.fade-animation(ng-show="!vm.pageLoading")
 
 	// right column
 	.col-sm-3.col-sm-push-9.col--menu.text-center
