--- a/src/app/games/list/game.list.pug
+++ b/src/app/games/list/game.list.pug
@@ -1,7 +1,7 @@
-include ../template/_mixins
-include ../template/paginator
+include ../../template/_mixins
+include ../../template/paginator
 
-.row.row--fullheight(ng-controller="GameListCtrl as vm")
+.row.row--fullheight
 
 	//- main column
 	.col-sm-9.col--main
