--- a/src/index.pug
+++ b/src/index.pug
@@ -1,7 +1,7 @@
 doctype html
 block root
 //- to debug injections, add ng-strict-di to <html> element and run in dev mode!
-html#app(ng-app="vpdb", lang="en")
+html#app(lang="en")
 	head
 		title(ng-bind="pageTitle")
 		meta(charset='utf8')
