refactor: Move editor into separate module.

--- a/src/app/shared/editor/editor.directive.pug
+++ b/src/app/shared/editor/editor.directive.pug
@@ -1,4 +1,4 @@
-include ../template/_mixins
+include ../../template/_mixins
 div(ng-class="{ media: !!user }")
 	div.media-left.avatar(ng-show="user")
 		img.img-avatar.pull-left(gravatar-src="user.gravatar_id", gravatar-default="retro", fallback-icon="user")
