refactor: Make backglasses lazy loaded.

--- a/src/app/backglasses/admin/backglass.add.pug
+++ b/src/app/backglasses/admin/backglass.add.pug
@@ -1,6 +1,6 @@
-include ../template/_mixins
+include ../../template/_mixins
 
-.row.row--fullheight(ng-controller="BackglassAddCtrl as vm")
+.row.row--fullheight
 	.col-sm-9.col--main
 
 		.alert.alert-danger.no-space-top(ng-show="vm.game.restrictions.release.mpu")
