--- a/src/app/common/auth/auth.callback.pug
+++ b/src/app/common/auth/auth.callback.pug
@@ -1,4 +1,4 @@
-include ../template/_mixins
+include ../../template/_mixins
 
 div.text-center.padder-top-2x.padder-bottom-2x(ng-controller="AuthCallbackCtrl as vm")
 	div(ng-hide="vm.error")
