--- a/src/app/admin/builds/build.add.admin.modal.pug
+++ b/src/app/admin/builds/build.add.admin.modal.pug
@@ -1,5 +1,5 @@
-include ../template/_mixins
-include build.form.pug
+include ../../template/_mixins
+include ./build.form.pug
 
 .theme-light
 	.modal-header
