refactor: Make users lazy loaded.

--- a/src/app/admin/uploads/uploads.list.admin.pug
+++ b/src/app/admin/uploads/uploads.list.admin.pug
@@ -1,6 +1,6 @@
-include ../template/_mixins
+include ../../template/_mixins
 
-.row.row--fullheight(ng-controller="UploadsListAdminCtrl as vm")
+.row.row--fullheight
 	.col-sm-3.col--menu
 		h1 Filter
 		hr
