refactor: Make remaining content lazy loaded.

--- a/src/app/content/rules/rules.pug
+++ b/src/app/content/rules/rules.pug
@@ -1,4 +1,4 @@
-include ../template/_mixins
+include ../../template/_mixins
 
 .row.row--content.ng-cloak.row--fullheight.fade-animation(ng-controller="RulesCtrl as vm")
 
