refactor: Merge core module into common and shared.

--- a/src/app/common/errors/error.404.pug
+++ b/src/app/common/errors/error.404.pug
@@ -1,4 +1,4 @@
-include ../template/_mixins
+include ../../template/_mixins
 .center-middle.center-middle-errorpage(ng-controller="Error404Ctrl as vm")
 	+icon('vpdb-o').svg-huge
 	h1 404
