--- a/src/app/common/modal/modal.markdown.doc.pug
+++ b/src/app/common/modal/modal.markdown.doc.pug
@@ -1,4 +1,4 @@
-include ../template/_mixins
+include ../../template/_mixins
 .theme-light(ng-init="mdfiddle = vm.data")
 	.modal-header
 		h1.h--no-margin.h--small
