--- a/src/app/shared/rating/rating.directive.pug
+++ b/src/app/shared/rating/rating.directive.pug
@@ -1,4 +1,4 @@
-include ../template/_mixins
+include ../../template/_mixins
 
 .ratingbox__left-col
 	.ratingbox__rating.rating-user(ng-class="{ 'rating-10': ratingVm.ratingHover == 10, 'color-primary': ratingVm.boxHovering }") {{ ratingVm.rating | ratingFormat }}
