--- a/src/app/games/details/top-badge.directive.pug
+++ b/src/app/games/details/top-badge.directive.pug
@@ -1,4 +1,4 @@
-include ../template/_mixins
+include ../../template/_mixins
 a.top-badge(ng-show="vm.hasRank", ng-class="place", ng-href="href", target="_blank")
 	+icon('laurel-left')
 	.top-block
