--- a/src/styles/colors/navbar.styl
+++ b/src/styles/colors/navbar.styl
@@ -23,56 +23,64 @@
 // Both themes
 // --------------------------------------------------
 
-// VPDB logo
-.navbar-brand
-	.svg-icon
-		&.logo
-			fill $color-primary
-		&.logo-vp
-			fill $color-primary
-		&.logo-db
-			fill $color-lighter
-	.logo-beta
-		color rgba(white, 0.65)
-	a:hover
-		.logo
-			fill $color-primary-light
-		.logo-vp
-			fill $color-primary-light
-		.logo-db
-			fill $color-lightest
+$test = #7c7469
+.theme-dark, .theme-light
+	// VPDB logo
+	.navbar-brand
+		.svg-icon
+			&.logo
+				fill $color-primary
+				filter drop-shadow(0px 0px 4px rgba(0,0,0,0.5))
+			&.logo-vp
+				fill $color-primary
+				filter drop-shadow(0px 0px 4px rgba(0,0,0,0.5))
+			&.logo-db
+				fill $color-lighter
+				filter drop-shadow(0px 0px 4px rgba(0,0,0,0.5))
+		.logo-beta
+			color rgba(white, 0.65)
+		a:hover
+			.logo
+				fill $test
+				filter none
+			.logo-vp
+				fill $test
+				filter none
+			.logo-db
+				fill $test
+				filter none
 
-// Navbar nav links
-.navbar-default .navbar-nav
-	> li a
-		background-color transparent
-		color $color-lighter
-		.svg-icon
-			fill $color-lighter
-		&:hover, &:focus
-			color $color-lightest
+	// Navbar nav links
+	.navbar-default .navbar-nav
+		> li a
+			background-color transparent
+			color $color-lighter
 			.svg-icon
-				fill $color-lightest
-	> .active > a
-		background-color $color-darkest
-		color $color-primary
-		.svg-icon
-			fill $color-primary
-		&:hover, &:focus
+				fill $color-lighter
+			&:hover, &:focus
+				color $color-lightest
+				.svg-icon
+					fill $color-lightest
+		> .active > a
 			background-color $color-darkest
 			color $color-primary
 			.svg-icon
 				fill $color-primary
+			&:hover, &:focus
+				background-color $color-darkest
+				color $color-primary
+				.svg-icon
+					fill $color-primary
 
-// Dropdown menu states
-.navbar-default .navbar-nav > .open
-	& > a, & > a:hover, & > a:focus
-		color $color-primary
-		background-color transparent
-		.svg-icon
-			fill $color-primary
-		&.btn.btn-hollow
-			border-color $color-primary
+	// Dropdown menu states
+	.navbar-default .navbar-nav > .open
+		& > a, & > a:hover, & > a:focus
+			color $color-primary
+			background-color transparent
+			.svg-icon
+				fill $color-primary
+			&.btn.btn-hollow
+				border-color $color-primary
 
 
 //
