test: Fix compilation and screwed up dependency.

--- a/src/styles/colors/navbar.styl
+++ b/src/styles/colors/navbar.styl
@@ -23,7 +23,6 @@
 // Both themes
 // --------------------------------------------------
 
-$test = #7c7469
 .theme-dark, .theme-light
 	// VPDB logo
 	.navbar-brand
@@ -41,13 +40,13 @@ $test = #7c7469
 			color rgba(white, 0.65)
 		a:hover
 			.logo
-				fill $test
+				fill #92897c
 				filter none
 			.logo-vp
-				fill $test
+				fill #92897c
 				filter none
 			.logo-db
-				fill $test
+				fill #92897c
 				filter none
 
 	// Navbar nav links
