feat: Add loading spinner until app is bootstrapped.

--- a/src/styles/animations.styl
+++ b/src/styles/animations.styl
@@ -51,9 +51,9 @@
 	transition all 1s
 @keyframes load8
 	0%
-		transform: rotate(0deg)
+		transform rotate(0deg)
 	100%
-		transform: rotate(360deg);
+		transform rotate(360deg)
 
 // Fade animation
 .fade-animation
