--- a/src/styles/vendor.less
+++ b/src/styles/vendor.less
@@ -19,6 +19,7 @@
 
 // Core variables and mixins
 @import "~bootstrap/less/variables.less";
+@import "bootstrap-vars.less";
 @import "~bootstrap/less/mixins.less";
 
 // Reset and dependencies
