--- a/src/index.pug
+++ b/src/index.pug
@@ -3,7 +3,7 @@ block root
 //- to debug injections, add ng-strict-di to <html> element and run in dev mode!
 html#app(lang="en")
 	head
-		title(ng-bind="pageTitle")
+		title(ng-bind="pageTitle") VPDB
 		meta(charset='utf8')
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 		meta(name="theme-color", content="#2c190b")
@@ -22,13 +22,26 @@ html#app(lang="en")
 		meta(http-equiv="X-UA-Compatible", content="IE=Edge")
 		script(type="text/javascript", src="//use.typekit.net/xhi7wnv.js")
 		script(type="text/javascript") try { Typekit.load(); } catch (e) { }
-
+		style @keyframes loading-spinner{to{transform:rotate(360deg)}}body{background-color:#121110}loading>.logo{margin:0;position:absolute;top:35%;left:50%;transform:translate(-55%,-35%)}loading>.logo svg.svg-icon{fill:#4d4b49;position:absolute}
 		base(href="/")
 
 	body#top(ng-class="themeName || 'theme-dark'")
 
 		//- the app
 		vpdb
+			//- display this until the app has bootstrapped
+			loading
+				.logo
+					div(style='height:100px')
+						svg.svg-icon(style='height:88px;width:88px;top:6px;left:6px;')
+							use(xlink:href='#vpdb')
+						svg.svg-icon(style='height:100px;width:100px;animation:loading-spinner 2s linear infinite;')
+							use(xlink:href='#vpdb-notch')
+					div
+						svg.svg-icon(style='height:40px;width:40px;position:relative;left:11px')
+							use(xlink:href='#logo-vp')
+						svg.svg-icon(style='height:40px;width:40px;position:relative;left:10px')
+							use(xlink:href='#logo-db')
 
 		//- notifications
 		growl-notifications
@@ -50,6 +63,6 @@ html#app(lang="en")
 		each spriteFileName in htmlWebpackPlugin.files.sprites
 			| !{spriteFileName}
 
-		//- Google Analytics
+		//- Google Analytics FIXME
 		//if gaEnabled
 		//	script(type="text/javascript") (function(i, s, o, g, r, a, m) { i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function() { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m) })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
