--- a/src/app/home/home.pug
+++ b/src/app/home/home.pug
@@ -32,7 +32,7 @@ include ../template/_mixins
 		.searchbox.abs-center
 			form.form-inline
 				.input-group.input-group--separated
-					input.form-control.input--lighter(type="text", ng-model="vm.q", focus-on)
+					input.form-control.input--lighter(type="text", ng-model="vm.q", aria-label="Search", focus-on)
 					.input-group-addon
 						+icon('search').space-left
 
