fix(settings): Fix infinite digest loop.

--- a/src/app/profile/profile.pug
+++ b/src/app/profile/profile.pug
@@ -38,7 +38,7 @@ include ../template/_mixins
 
 		.clearfix
 		.ui-view-wrapper
-			| <div ui-view class="height-animation"></div>
+			| <div ui-view></div>
 
 		p.padder-bottom-2x
 
