feat(app): First version of better loading spinners.

--- a/src/app/app.pug
+++ b/src/app/app.pug
@@ -121,7 +121,9 @@ div(ng-repeat="(id, notification) in notifications track by id")
 
 	//- -----------------------------------------------------------------------------
 	//- content
-	| <div ui-view></div>
+	ui-view
+		+loading("true")
+
 	//- end content
 	//- -----------------------------------------------------------------------------
 
