--- a/src/styles/progress-bars.styl
+++ b/src/styles/progress-bars.styl
@@ -117,3 +117,12 @@
 	p
 		margin-top 4px
 		background-color $color-lightest-inv
+
+// Loading spinner
+loading
+	height 300px
+	display block
+	.top
+		height 100px
+	.bottom
+		position relative
