--- a/src/app/releases/details/release.details.pug
+++ b/src/app/releases/details/release.details.pug
@@ -1,8 +1,6 @@
 include ../../template/_mixins
 
-p.padder-top(ng-show="vm.pageLoading")
-	+icon('circle-o-notch').small.svg-spin.space-right.shift-up
-	| Loading...
++loading("vm.pageLoading")
 
 .row.ng-cloak.row--fullheight.fade-animation(ng-show="!vm.pageLoading")
 
@@ -91,7 +89,7 @@ p.padder-top(ng-show="vm.pageLoading")
 	//-====================================================================
 	.col-sm-8.col-md-9.col-sm-pull-4.col-md-pull-3.col--main(ng-show="vm.found")
 
-		.alert.alert-danger.no-space-top(ng-show="vm.game.restrictions.release.mpu")
+		.alert.alert-danger.no-space-top(ng-if="vm.game.restrictions.release.mpu")
 			+icon('warning').shift-up.space-right
 			| This is a {{ vm.game.mpu.short }} game. We allow uploads of restricted games but as the author you are the only one who can access this release.
 
