--- a/src/app/template/_mixins.pug
+++ b/src/app/template/_mixins.pug
@@ -15,3 +15,13 @@ mixin paginator(pagination, paginate, num)
 	span.small.space-left PAGE &nbsp; {{ !{pagination}.page }} / {{ !{pagination}.pageCount }}
 	span.space-left(ng-show=`${pagination}.links.next`, ng-click=`${paginate}(${pagination}.links.next)`): +icon('angle-right').shift-up.smaller.a.a--lighter
 	span.space-left(ng-show=`${pagination}.links.last`, ng-click=`${paginate}(${pagination}.links.last)`): +icon('angle-right-skip').shift-up.smaller.a.a--lighter
+
+mixin loading(ngif)
+	loading#loading(ng-if=ngif)
+		div.logo
+			.top
+				svg.svg-icon(style='height:88px;width:88px;top:6px;left:6px;'): use(xlink:href='#vpdb')
+				svg.svg-icon(style='height:100px;width:100px;animation:loading-spinner 2s linear infinite;'): use(xlink:href='#vpdb-notch')
+			.bottom
+				svg.svg-icon(style='height:40px;width:40px;position:relative;left:11px'): use(xlink:href='#logo-vp')
+				svg.svg-icon(style='height:40px;width:40px;position:relative;left:6px'): use(xlink:href='#logo-db')
