chore(deps): Properly tree-shake lodash. Closes #64.

--- a/src/index.pug
+++ b/src/index.pug
@@ -70,7 +70,7 @@ html#app(lang="en")
 					div(style='height:100px')
 						svg.svg-icon(style='height:88px;width:88px;top:6px;left:6px;')
 							use(xlink:href='#vpdb')
-						svg.svg-icon(style='height:100px;width:100px;animation:loading-spinner 2s linear infinite;')
+						svg.svg-icon(style='height:100px;width:100px')
 							use(xlink:href='#vpdb-notch')
 					div
 						svg.svg-icon(style='height:40px;width:40px;position:relative;left:11px')
