fix(app): Fix metadata.

--- a/src/index.pug
+++ b/src/index.pug
@@ -15,9 +15,9 @@ html#app(lang="en")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 		meta(name="theme-color", content="#2c190b")
 		meta(http-equiv="Cache-control", content="public")
-		meta(name="description", content="{{ meta.description }}")
-		meta(name="keywords", content="{{ meta.keywords }}")
-		meta(name="thumbnail", content="{{ meta.thumbnail }}")
+		meta(name="description", ng-attr-content="{{ meta.description }}", content="VPDB is a platform around virtual pinball. It seeks to preserve the great pinball games from the last and current century in digital form, created by a wonderful community.")
+		meta(name="keywords", ng-attr-content="{{ meta.keywords }}", content="virtual pinball, database, pinball, vpinball, visual pinball, directb2s, backglass, beautiful, fast, open source")
+		meta(name="thumbnail", ng-attr-content="{{ meta.thumbnail }}", content="/favicon/android-chrome-256x256.png")
 		link(rel="apple-touch-icon", sizes="180x180", href="/favicon/apple-touch-icon.png")
 		link(rel="icon", type="image/png", sizes="32x32", href="/favicon/favicon-32x32.png")
 		link(rel="icon", type="image/png", sizes="16x16", href="/favicon/favicon-16x16.png")
