refactor: Replace angular-dragdrop with ngdraggable.

--- a/src/styles/panels.styl
+++ b/src/styles/panels.styl
@@ -250,20 +250,20 @@
 	padding-top 2px
 	padding-bottom 10px
 	transition background-color $animation-long, border-color $animation-long, opacity $animation-long
-	&:before
-		transition background-color $animation-long, border-color $animation-long, opacity $animation-long
-		opacity 0
-		content " "
-		position: absolute;
-		top -15px
-		right 0
-		bottom 0
-		left -15px
-		border-radius $border-radius-large
-		border-style solid
-		border-width 2px
-	&.active:before
-		opacity 1
+	//&:before
+	//	transition background-color $animation-long, border-color $animation-long, opacity $animation-long
+	//	opacity 0
+	//	content " "
+	//	position: absolute;
+	//	top -15px
+	//	right 0
+	//	bottom 0
+	//	left -15px
+	//	border-radius $border-radius-large
+	//	border-style solid
+	//	border-width 2px
+	//&.active:before
+	//	opacity 1
 
 
 // Panel Groups
