--- a/src/app/releases/admin/add/release.add-04-tags.pug
+++ b/src/app/releases/admin/add/release.add-04-tags.pug
@@ -7,45 +7,40 @@
 		//- SELECTED
 		h5.h--shift-up.hr--margin-small Selected Tags
 		#selected-tags.panel--dropzone-alt(
-			ng-model="vm.meta.tags",
-			data-drop="true",
-			data-jqyoui-options="{ accept: '.badge:not([ng-model=vm.meta.tags])', activeClass: 'active', 'hoverClass': 'hover' }",
-			jqyoui-droppable="{ multiple: true, onDrop: 'vm.tagDropped' }"
+			ng-drop="true",
+			ng-drop-success="vm.addTag($data.tag, $event);"
 		)
 			div.padder-top(ng-repeat="tag in vm.meta.tags")
 				.badge.badge--tag(
-					ng-model="vm.meta.tags",
-					data-drag="true",
-					data-jqyoui-options="{ revert: 'invalid' }",
-					jqyoui-draggable="{ animate: true, index: {{$index}} }"
+					ng-drag="true",
+					ng-drag-data="{tag}"
 				)
 					| {{ tag.name }}
-					+icon('times-circle').small.shift-up.space-left.a(ng-click="vm.removeTag(tag)")
+					+icon('times-circle').small.shift-up-less.space-left.a(ng-prevent-drag, ng-click="vm.removeTag(tag, $event)")
 				i.space-left {{ tag.description }}
 			i(ng-show="vm.meta.tags.length == 0") No tags selected. Drag and drop them from the right hand pane in here.
 	.col-sm-6
 		.rel-pos
 			#available-tags.panel--dropzone-alt-2(
-				ng-model="vm.tags",
-				data-drop="true",
-				data-jqyoui-options="{ accept:':not([ng-model=tags])', activeClass: 'active', hoverClass: 'hover' }",
-				jqyoui-droppable="{ multiple: true, onDrop: 'vm.tagDropped' }"
+				ng-drop="removingTag",
+				ng-drop-success="vm.removeTag($data.tag, $event)"
 			)
 				//- EXISTING
 				h5.hr--margin-small.h--shift-up Existing Tags
 				.badge.badge--tag(
 					ng-repeat="tag in vm.tags",
-					ng-model="vm.tags",
-					data-drag="true",
-					data-jqyoui-options="{ revert: 'invalid' }",
-					jqyoui-draggable='{ animate: true, index: {{$index}} }'
+					ng-drag="true",
+					ng-drag-data="{tag}",
+					ng-drag-start="vm.startTagDrag($data, $event)",
+					ng-drag-stop="vm.stopTagDrag($data, $event)"
 				)
 					| {{ tag.name }}
 					+icon('question-circle').small.shift-up.space-left.a(
 						uib-tooltip="{{ tag.description }}",
-						tooltip-append-to-body="false",
+						tooltip-append-to-body="true",
 						tooltip-popup-delay="200"
 					)
+
 				i(ng-show="vm.tags.length == 0") No more tags available.
 
 		button#add-tag-btn.btn.btn-default.padder-top.pull-right(ng-click="vm.createTag()")
